Updates build task

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "devDependencies": {
     "gulp": "^3.9.0",
     "gulp-clean": "^0.3.1",
+    "gulp-concat": "^2.6.0",
     "gulp-concat-vendor": "0.0.4",
     "gulp-cssmin": "^0.1.7",
     "gulp-include-source": "0.0.5",
