Sets up angular app

--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "gulp": "^3.9.0",
     "gulp-clean": "^0.3.1",
     "gulp-concat": "^2.6.0",
-    "gulp-concat-vendor": "0.0.4",
+    "gulp-concat-vendor": "file:///Users/rcorrie/Forks/gulp-concat-vendor",
     "gulp-cssmin": "^0.1.7",
+    "gulp-htmlmin": "^1.2.0",
     "gulp-include-source": "0.0.5",
     "gulp-ng-annotate": "^1.1.0",
+    "gulp-ng-templates": "0.0.6",
     "gulp-ruby-sass": "^2.0.5",
     "gulp-uglify": "^1.5.1",
     "gulp-webserver": "^0.9.1",
