--- a/bower.json
+++ b/bower.json
@@ -16,8 +16,12 @@
     "test",
     "tests"
   ],
-  "devDependencies": {
+  "dependencies": {
     "angular": "~1.4.8",
-    "angular-ui-router": "ui-router#~0.2.15"
+    "angular-ui-router": "ui-router#~0.2.15",
+    "angular-ui-router-anim-in-out": "~1.0.2"
+  },
+  "devDependencies": {
+    "animate.css": "~3.4.0"
   }
 }
