--- a/bower.json
+++ b/bower.json
@@ -19,9 +19,8 @@
   "dependencies": {
     "angular": "~1.4.8",
     "angular-ui-router": "ui-router#~0.2.15",
-    "angular-ui-router-anim-in-out": "~1.0.2"
-  },
-  "devDependencies": {
-    "animate.css": "~3.4.0"
+    "angular-ui-router-anim-in-out": "~1.0.2",
+    "animate.css": "~3.4.0",
+    "angular-tidy-img": "~0.0.4"
   }
 }
